Completed home cards

--- a/home.html
+++ b/home.html
@@ -43,6 +43,13 @@
                     <i class="fas fa-music"></i>
                 </div>
             </div>
+
+            <div class="about-card">
+                <h3 class="card-header">About</h3>
+                <div class="about-card-body">
+                    <i class="fas fa-user"></i>
+                </div>
+            </div>
         </div>
     </div>
 </body>
