Updated styling to home page

--- a/home.html
+++ b/home.html
@@ -52,5 +52,15 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-navigation">
+            <nav>
+                <a><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a><i class="fab fa-github"></i> GitHub</a>
+                <a><i class="fab fa-instagram"></i> Instagram</a>
+            </nav>
+            <h4>Dylan Smith 2019</h4>
+        </div>
+    </footer>
 </body>
 </html>
