Created styling for projects page

--- a/projects.html
+++ b/projects.html
@@ -7,20 +7,50 @@
     <script src="https://kit.fontawesome.com/5ee808abb3.js"></script>
 </head>
 <body class="projects">
-<header>
-    <h3 class="header-name">
-        <i class="fas fa-terminal"></i>
-        Dylan Smith
-    </h3>
-    <div class="navigation-wrapper">
-        <nav class="header-nav">
-            <a>Projects</a>
-            <a>Music</a>
-            <a>About</a>
-            <a> <i class="fab fa-github"></i></a>
-        </nav>
+    <header>
+        <h3 class="header-name">
+            <i class="fas fa-terminal"></i>
+            Dylan Smith
+        </h3>
+        <div class="navigation-wrapper">
+            <nav class="header-nav">
+                <a>Projects</a>
+                <a>Music</a>
+                <a>About</a>
+                <a> <i class="fab fa-github"></i></a>
+            </nav>
+        </div>
+    </header>
+    <div class="projects-body-head">
+        <h1>Projects <i class="fas fa-laptop-code"></i></h1>
+        <h2></h2>
+        <h3>
+            This page is a collection of some of my favorite things I've worked on.<br>
+            Check out my GitHub to see some of the other cool things I've made.
+        </h3>
     </div>
-</header>
-
+    <div class="personal-website-container">
+        <h3>You are here! This is my personal website, designed using HTML and CSS/SASS. <br>
+            This project was intended as practice for designing web pages. This site will constantly<br>
+            be updated whenever I find new web technologies I want to test out.<br>
+            Check it out on GitHub!
+        </h3>
+        <ul>
+            <h3>Technologies used:</h3>
+            <li><h4>HTML</h4></li>
+            <li><h4>CSS/SASS</h4></li>
+        </ul>
+        <img src="Images/Homepage.jpg" alt="Personal Website Homepage" width="450" height="300">
+    </div>
+    <footer>
+        <div class="footer-navigation">
+            <nav>
+                <a><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a><i class="fab fa-github"></i> GitHub</a>
+                <a><i class="fab fa-instagram"></i> Instagram</a>
+            </nav>
+            <h4>Dylan Smith 2019</h4>
+        </div>
+    </footer>
 </body>
 </html>
